--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -227,8 +227,20 @@
      <height>25</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuApplication">
+    <property name="title">
+     <string>Application</string>
+    </property>
+    <addaction name="actionSettings"/>
+   </widget>
+   <addaction name="menuApplication"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="actionSettings">
+   <property name="text">
+    <string>Settings</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
